<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="loop_app_name">LoopTube</string>
    <string name="loop_hello_world">Hello world!</string>
    
    <string name="loop_splash_title">LoopTube</string>
    <string name="loop_splash_description">Simplify your YouTube experience</string>
    
    <string name="loop_video_player_service_started">VideoPlayerService started</string>
    <string name="loop_video_player_invalid_video">This video can not be played.</string>
    <string name="loop_video_player_unknown_error">Unknown error occurred!</string>
    <string name="loop_video_player_default_duration">0:00 / 0:00</string>
    <string name="loop_video_player_playlist">Playlist</string>
    <string name="loop_video_player_dialog_seeking">Seeking&#8230;</string>
    <string name="loop_video_player_dialog_end">End of playlist.</string>
    <string name="loop_video_player_dialog_loading">Loading...</string>
    <string name="loop_video_player_ignored">This video is now in blacklist and will never be played.</string>
    <string name="loop_video_player_ignored_already">This video is already in blacklist.</string>
    <string name="loop_video_player_volume_setting">Volume Setting</string>
    <string name="loop_video_player_return_from_full_screen">Full screen mode is turned off.</string>
    <string name="loop_video_player_full_screen">Full screen mode is turned on.</string>
    <string name="loop_video_player_favorite">Added this video to favorite list</string>
    <string name="loop_video_player_favorite_error">This video has already been added to favorite list.</string>
    
    <string name="loop_main_title">Search by artist</string>
    <string name="loop_main_search_artist">Search now</string>
    <string name="loop_main_recent_artists">Recent artists</string>
    <string name="loop_main_button_search">Search</string>
    <string name="loop_main_dialog_searching">Searching&#8230;</string>
    <string name="loop_main_no_history">There is no search history.</string>
    <string name="loop_main_no_favorite">There is no favorite video.</string>
    <string name="loop_main_search_hint">ex. Oasis</string>
    <string name="loop_main_invalid_query">Invalid query.</string>
    <string name="loop_main_confirm_clear_history">Search history will be cleared. Are you sure?</string>
    <string name="loop_main_confirm_clear_blacklist">Blacklist will be cleared. Are you sure?</string>
    <string name="loop_main_dialog_not_playing">There is no playing video.</string>
    <string name="loop_main_error_no_video">No videos are found. Try checking your connection.</string>
    <string name="loop_main_error_bad_connection">Your device is not connected to network.</string>
    <string name="loop_main_open_google_play">Open Google Play</string>
    <string name="loop_main_confirm_clear_one_history">This artist will be cleared. Are you sure?</string>
    <string name="loop_main_now_playing">Now Playing</string>
    <string name="loop_main_tab_history">History</string>
    <string name="loop_main_tab_favorite">Favorite</string>
    
    <string name="loop_settings_title">Setings</string>
    
    <string name="loop_widget_not_playing">There is no playing video.</string>
    <string name="loop_widget_loading">Now loading&#8230;</string>
    
    <string name="loop_ok">OK</string>
    <string name="loop_cancel">Cancel</string>
    <string name="loop_dummy">dummy</string>
    <string name="loop_video_player_play">Play</string>
    
    <string name="loop_menu_settings">Settings</string>
    <string name="loop_menu_item_search">Search</string>
    <string name="loop_menu_item_show_player">Show video player</string>
    <string name="loop_menu_item_clear_history">Clear search history</string>
    <string name="loop_menu_item_clear_blacklist">Clear blacklist</string>
    <string name="loop_menu_item_version">About LoopTube</string>
    <string name="loop_menu_item_delete_history">Delete from history</string>
    <string name="loop_menu_item_favorite">Add favorite list</string>
    <string name="loop_menu_item_delete_favorite">Delete from favorites</string>
    
    <string name="loop_menu_item_start_repeat">Repeat this video</string>
    <string name="loop_menu_item_stop_repeat">Stop repeat</string>
    <string name="loop_menu_item_ignore">Add this video to blacklist</string>
    <string name="loop_menu_item_share">Share this video</string>
    <string name="loop_menu_item_settings">Settings</string>
    
    <!-- Preferences -->
    <string name="loop_pref_category_history_key">pref_categoryHistory</string>
    <string name="loop_pref_category_history_title">Search history</string>
    <string name="loop_pref_category_favorite_key">pref_categoryFavorite</string>
    <string name="loop_pref_category_favorite_title">Favorites</string>
    <string name="loop_pref_category_black_list_key">pref_categoryBlackList</string>
    <string name="loop_pref_category_black_list_title">Black list</string>
    <string name="loop_pref_category_about_key">pref_categoryAbout</string>
    <string name="loop_pref_category_about_title">About this app</string>
    
    <string name="loop_pref_clear_favorite_key">pref_clearFavorite</string>
    <string name="loop_pref_clear_favorite_title">Clear favorites</string>
    <string name="loop_pref_clear_favorite_dialog_msg">Are you sure to clear favorites?</string>
    <string name="loop_pref_clear_favorite_toast">Cleared favorites successfully</string>
    <string name="loop_pref_clear_history_key">pref_clearHistory</string>
    <string name="loop_pref_clear_history_title">Clear search history</string>
    <string name="loop_pref_clear_history_dialog_msg">Are you sure to clear search history?</string>
    <string name="loop_pref_clear_history_toast">Cleared search history successfully</string>
    <string name="loop_pref_clear_black_list_key">pref_clearBlackList</string>
    <string name="loop_pref_clear_black_list_title">Clear black list</string>
    <string name="loop_pref_clear_black_list_dialog_msg">Are you sure to clear black list?</string>
    <string name="loop_pref_clear_black_list_toast">Cleared black list successfully</string>
    <string name="loop_pref_auto_black_list_key">pref_autoBlackList</string>
    <string name="loop_pref_auto_black_list_title">Auto black list</string>
    <string name="loop_pref_auto_black_list_summary_on">Find black list by keyword filtering automatically</string>
    <string name="loop_pref_auto_black_list_summary_off">Does not find black list automatically</string>
    <string name="loop_pref_feedback_title">Feedback</string>
    <string name="loop_pref_feedback_summary">Rate this app on Google Play</string>
    <string name="loop_pref_version_key">pref_version</string>
    <string name="loop_pref_version_title">Version</string>
    
    <string-array name="loop_black_word_list">
    </string-array>

</resources>